--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Estoque - Santa Ilha</title>
+    <title>Controle de Patrimônio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <img src="img/Logo_Bitrix.png" alt="Logo Bitrix">
-        <h1>Controle de Estoque</h1>
+        <h1>Controle de Patrimônio</h1>
         <button id="logoutBtn" class="btn-logout">Sair</button>
     </header>
     <main>
@@ -57,3 +57,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
