--- a/login.html
+++ b/login.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Controle de Estoque</title>
+    <title>Login - Controle de Patrimônio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <img src="img/Logo_Bitrix.png" alt="Logo Bitrix">
-        <h1>Controle de Estoque</h1>
+        <h1>Controle de Patrimônio</h1>
     </header>
     <main>
         <div class="login-container">
